--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ p{
     border-radius: 10px;
     border: 5px solid rgb(255, 255, 255);
     backface-visibility: hidden;
+    box-sizing: border-box;
 }
 
 .result {
@@ -138,10 +139,91 @@ p{
     position: absolute;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(rgb(0, 0, 0),rgb(110, 180, 255), rgb(0, 0, 0));
     height: 500px;
     width: 400px;
     border-radius: 10px;
-    border: 5px solid rgb(255, 255, 255);
+    border: 30px solid #dfecf2;
     backface-visibility: hidden;
+    background-color: rgb(253 253 253);
+    box-sizing: border-box;
+}
+.input{
+    margin: 10px 0px;
+    height: 12vh;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    justify-content: space-around;
+}
+.input input{
+    font-size: .98rem;
+    padding: 11px;
+    border-radius: 15px;
+    border: 2px solid rgb(205, 205, 205);
+    width: 94%;
+    margin-left: 15px;
+}
+
+.add{
+    font-size: 1.0rem;
+    border-radius: 10px;
+    padding: 10px;
+    margin-right: 17px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+.tasks{
+    height: 100%;
+    box-sizing: border-box;
+    /* background-color: beige; */
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+
+.card{
+    display: flex;
+    background-color: white;
+    margin: 10px 17px 10px 15px ;
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-between;
+    box-shadow: 0px 0px 3px 3px rgb(213, 213, 213);
+}
+#tick{
+    transform: scale(1.28);
+    color: blue;
+    cursor: pointer;
+}
+.left{
+    cursor: pointer;
+    display: flex;
+    gap: 8px;
+    font-size: 1rem;
+    margin-left: 10px;
+}
+.cross{
+    margin-right: 10px;
+    appearance: unset;
+    border: none;
+    background-color: white;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.hidden{
+    position: fixed;
+    width: 150px;
+    margin: 40px 25px;
+    padding: 0px 10px;
+    background-color: white;
+    font-size: 1rem;
+    color: red;
+    visibility: hidden;
+}
+.hidden.show{
+    visibility: visible;
 }
