--- a/index.css
+++ b/index.css
@@ -26,6 +26,15 @@ nav:hover {
     height: 100vh;
 }
 
+.flipper {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    position: relative;
+    transform: rotateY(180deg);
+}
+
 /* Calculator */
 
 .container {
@@ -33,14 +42,7 @@ nav:hover {
     perspective: 1000px;
 }
 
-.flipper {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-    position: relative;
-    /* transform: rotateY(180deg); */
-}
+
 
 .container:hover .flipper {
     transform: rotateY(0deg);
@@ -193,7 +195,7 @@ p{
     justify-content: space-between;
     box-shadow: 0px 0px 3px 3px rgb(213, 213, 213);
 }
-#tick{
+.tick{
     transform: scale(1.28);
     color: blue;
     cursor: pointer;
@@ -226,4 +228,8 @@ p{
 }
 .hidden.show{
     visibility: visible;
+}
+
+#backtodo{
+    background: linear-gradient(#96deff,rgb(241, 254, 255),#98defe);
 }
