--- a/index.css
+++ b/index.css
@@ -25,8 +25,8 @@ nav:hover {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    padding: 15px;
-    justify-content: center;
+    padding: 40px 15px;
+    justify-content: space-around;
     align-items: flex-start;
 }
 
