--- a/index.css
+++ b/index.css
@@ -306,19 +306,11 @@ body.light .front{
     height: 500px;
 }
 
-#weatherContainerWrapper .flipper {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    position: relative;
-    transform: rotateY(0deg);
-}
 
 #weatherContainerWrapper .front,
 #weatherContainerWrapper .back {
     position: absolute;
-    inset: 0;
+    justify-content: center;
     backface-visibility: hidden;
     border-radius: 10px;
     box-sizing: border-box;
@@ -335,18 +327,6 @@ body.light .front{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#weatherContainerWrapper:hover .flipper {
-    transform: rotateY(180deg);
-}
-
-#weatherContainerWrapper .front {
-    transform: rotateY(0deg);
-}
-
-#weatherContainerWrapper .back {
-    transform: rotateY(180deg);
 }
 
 .weather-ui {
